option('driverdir', type : 'string', description : 'drivers path')
option('with_x11', type : 'combo', choices : ['yes', 'no', 'auto'], value : 'auto')
option('with_wayland_dmabuf',
    description: 'Build with Wayland support via the linux-dmabuf-v1 protocol.',
    type : 'combo',
    choices : ['yes', 'no', 'auto'],
    value : 'auto')
option('with_wayland_drm', 
    description: 'Build with Wayland support via the legacy wl_drm protocol.',
    type : 'combo',
    choices : ['yes', 'no', 'auto'],
    value : 'auto')
option('enable_hybrid_codec', type : 'boolean', value : false)
option('enable_tests', type : 'boolean', value : false)
